--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,16 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
     rel="stylesheet">
     <!-- in your header -->
-<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <title>William Peracchio</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but alexandria doesn't work properly without JavaScript enabled. Please enable it to
-      continue.</strong>
+    <strong>
+      Sorry, but my website doesn't work properly without JavaScript enabled. Please enable it to
+      continue.
+    </strong>
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
